# taskdeck

./: .gitignore  CODE_REVIEW.md  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  build.rs
fonts/LICENSES/: antonregular.txt  dejavu.txt  facultyglyphic.txt  lexendgiga.txt  spacemono.txt
src/: calendarwidgets.rs  color.rs  initialization.rs  lib.rs  main.rs  tasks.rs  ui.rs  utilities.rs  weather.rs
